--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -37,12 +37,14 @@
 > 今、手元不如意なので、参加は遠慮させていただきます。
 
 - 金欠病で
-> 
+> 字面意思，把没钱说成病，没钱病。“今、金欠病にかかっていましたね。”
 
-- 糊口をしのいでおります
-> 勉强糊口，混口饭吃。。。アルバイトで糊口をしのいでいます。
+- 糊口(ここう)をしのいでおります
+> 勉强糊口，混口饭吃。。。“アルバイトで糊口をしのいでいます”
 
 - 素寒貧(すかんぴん)
-> 給料前で素寒貧だよ。
+> 老子没钱！有点骂人的意思。給料前で素寒貧だよ。
 
-  
+#### D. 不懂，不了解。 わかりません→勉強不足で申し訳ございません。  
+被问到一些超出自己认知范围的问题的时候，勇于承认自己的无知是好事情，但同时放低姿态虚心请教会跟好。特别是在职场上被客户或者上司问倒的时候。  
+
