--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -2,7 +2,8 @@
 > 如何在日常会话中更好的展现自己
 
 ### 1.1 受け答え(如何应答对方)
-#### A. 原来如此:  なるほど　→　おっしゃる通りです
+#### A. 原来如此:  
+**なるほど　→　おっしゃる通りです**  
 「なるほど」如字面所示，用来表示自己理解对方的意思。但是不能连着用，特别是对着VIP玩家，会显得不礼貌，没文化。更高级的表达方式如下:
 
 - **確かにそうですね。**  
@@ -15,7 +16,8 @@
 > 严重拍马屁。被上司训斥了，来一句这个，立刻没事。
 
 
-#### B. 没事: 大丈夫です→問題ございません
+#### B. 没事
+**大丈夫です→問題ございません**  
 大丈夫是一句很好用的万金油句子。但是只会用这个可能会让人产生自己是一个话不多的孤僻症患者，或者没什么教养的错觉，简单的改成**問題ありません**印象会加分。
 - **差支えありません** 
 > 没什么障碍，无妨，没关系。比方说用在对方因为一些事情需要你调整事先约好的约会/会议时间，又担心你会有想法的时候，你可以来一句这个，让对方安心。
@@ -30,21 +32,72 @@
 - **お気持ちだけいただきます**(推荐)
 >人家问你需不需要帮忙的时候，请不要一句大丈夫です就把别人打发了，请用这句话！
 
-#### C.今お金がなくて。。。 →　今持ち合わせがなくて。。。
+#### C. 没钱  
+**今お金がなくて。。。 →　今持ち合わせがなくて。。**
 > "我现在没钱"是不是有点尴尬，应该说"手里不宽裕"，哈哈，好像没差。  
 
-- 手元不如意で  
+- **手元不如意で**  
 > 今、手元不如意なので、参加は遠慮させていただきます。
 
-- 金欠病で
+- **金欠病で** 
 > 字面意思，把没钱说成病，没钱病。“今、金欠病にかかっていましたね。”
 
-- 糊口(ここう)をしのいでおります
-> 勉强糊口，混口饭吃。。。“アルバイトで糊口をしのいでいます”
+- **糊口(ここう)をしのいでおります**
+> 勉强糊口，混口饭吃。。。“アルバイトで糊口をしのいでいます”  
+>しのぐ:　忍耐，忍受。"焚火をして寒さをしのく。"
 
-- 素寒貧(すかんぴん)
+- **素寒貧(すかんぴん)**  
 > 老子没钱！有点骂人的意思。給料前で素寒貧だよ。
 
-#### D. 不懂，不了解。 わかりません→勉強不足で申し訳ございません。  
-被问到一些超出自己认知范围的问题的时候，勇于承认自己的无知是好事情，但同时放低姿态虚心请教会跟好。特别是在职场上被客户或者上司问倒的时候。  
+#### D. 布吉岛 
+**わかりません→勉強不足で申し訳ございません.**  
+被问到一些超出自己认知范围的问题的时候，勇于承认自己的无知是好事情，但同时放低姿态虚心请教会更好。特别是在职场上被客户或者上司问倒的时候。  
+
+- **寡聞にして存じ上げません**
+>比学习不足更加谦虚的说法，也可以用于讥讽别人的胡说八道。  
+
+- **浅学非才**(せんがくひさい)  
+> "浅学非才を顧みず、リーダーとしてチームを引っ張るつもりです。"    
+>顧みる(かえりみる):1.回顾，2.顧みず:不顾,顾不上  
+
+#### E. 同意   
+**それでいいです→異存はございません/議論はありません**  
+#### F. 等待  
+**楽しみにお待ちしております。** → **首長くしてお待ちしております**  
+个人感觉伸长了脖子等有点做作了吧。前面一个也差不多了。
+- **指折り数えております**
+> 扳着手指头倒计时，@ 夏休みを指折り数えて待つ. @給料日を指折り数えて待つ
+
+- **待ち望む**  
+> 期待已久 @待ち望んでいる日がやってきました。
+
+- **手ぐすねを引いて待つ**  　
+>枕戈待旦,刀已经磨好，就等着来了。  
+
+#### G.请教问题
+**教えてください→ご教示ください**
+
+- **ご知恵を拝借(はいしゃく)できますか**
+
+#### H. 拍马屁，你真厉害  
+**上手ですね→お手の物ですね**  
+对上级或者长辈就不要用上手来拍马屁了，还轮不到你来评头论足。  
+
+- **右に出る者がない**
+>座位靠右一般是上等座，这句话的意思就是没有比你更优秀的了。  
+>@彼の成績は右に出る者がない。
+
+- **一頭地を抜いている**(不常用，但是会用的话会给人留下很有教养的感觉)   
+>@成績においては、常にクラスで一頭地を抜いていた。
+
+
+
+
+
+
+
+
+
+
+
 
