--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -1,8 +1,8 @@
-## Chapter.1 普段の会話で品良く見せる　
+# Chapter.1 普段の会話で品良く見せる　
 > 如何在日常会话中更好的展现自己
 
-### 1.1 受け答え(如何应答对方)
-#### A. 原来如此:  
+## 1.1 受け答え(如何应答对方)
+### A. 原来如此:  
 **なるほど　→　おっしゃる通りです**  
 「なるほど」如字面所示，用来表示自己理解对方的意思。但是不能连着用，特别是对着VIP玩家，会显得不礼貌，没文化。更高级的表达方式如下:
 
@@ -16,7 +16,7 @@
 > 严重拍马屁。被上司训斥了，来一句这个，立刻没事。
 
 
-#### B. 没事
+### B. 没事
 **大丈夫です→問題ございません**  
 大丈夫是一句很好用的万金油句子。但是只会用这个可能会让人产生自己是一个话不多的孤僻症患者，或者没什么教养的错觉，简单的改成**問題ありません**印象会加分。
 - **差支えありません** 
@@ -32,7 +32,7 @@
 - **お気持ちだけいただきます**(推荐)
 >人家问你需不需要帮忙的时候，请不要一句大丈夫です就把别人打发了，请用这句话！
 
-#### C. 没钱  
+### C. 没钱  
 **今お金がなくて。。。 →　今持ち合わせがなくて。。**
 > "我现在没钱"是不是有点尴尬，应该说"手里不宽裕"，哈哈，好像没差。  
 
@@ -49,7 +49,7 @@
 - **素寒貧(すかんぴん)**  
 > 老子没钱！有点骂人的意思。給料前で素寒貧だよ。
 
-#### D. 布吉岛 
+### D. 布吉岛 
 **わかりません→勉強不足で申し訳ございません.**  
 被问到一些超出自己认知范围的问题的时候，勇于承认自己的无知是好事情，但同时放低姿态虚心请教会更好。特别是在职场上被客户或者上司问倒的时候。  
 
@@ -60,9 +60,9 @@
 > "浅学非才を顧みず、リーダーとしてチームを引っ張るつもりです。"    
 >顧みる(かえりみる):1.回顾，2.顧みず:不顾,顾不上  
 
-#### E. 同意   
+### E. 同意   
 **それでいいです→異存はございません/議論はありません**  
-#### F. 等待  
+### F. 等待  
 **楽しみにお待ちしております。** → **首長くしてお待ちしております**  
 个人感觉伸长了脖子等有点做作了吧。前面一个也差不多了。
 - **指折り数えております**
@@ -74,12 +74,12 @@
 - **手ぐすねを引いて待つ**  　
 >枕戈待旦,刀已经磨好，就等着来了。  
 
-#### G.请教问题
+### G.请教问题
 **教えてください→ご教示ください**
 
 - **ご知恵を拝借(はいしゃく)できますか**
 
-#### H. 拍马屁，你真厉害  
+### H. 拍马屁，你真厉害  
 **上手ですね→お手の物ですね**  
 对上级或者长辈就不要用上手来拍马屁了，还轮不到你来评头论足。  
 
@@ -87,12 +87,29 @@
 >座位靠右一般是上等座，这句话的意思就是没有比你更优秀的了。  
 >@彼の成績は右に出る者がない。
 
-- **一頭地を抜いている**(不常用，但是会用的话会给人留下很有教养的感觉)   
+- **一頭地を抜いている**(不常用，用在很高级的场合，高层贵族的演讲？)   
 >@成績においては、常にクラスで一頭地を抜いていた。
 
+### I. 忘事
+**すみません、忘れておりました！→すみません、失念しておりました。**
 
+### J. 不要放在心上
+**忘れてください→ご放念ください。**  
+经常会用在邮件里，请不要放在心上，请放心。  
+> おかげ様で回復しましたので、ご放念ください。
+- **お気になさないでください** 
+> 自己帮了对方大忙，对方诚惶诚恐的时候来一句这个可以加分。
 
+### K. 一起，结伴
+**一緒に行きます→お供させていただきます**  
+对上级，至少要用ご一緒させていただきます。お共させていただきます是其升级版
 
+- **お相伴させていただきます**
+> 这也是比较高级的词汇了。一般用不到。
+
+### L. いただく→賜る（たまわる）
+也只是在书面上会用到吧，いただく的升级版  
+@ご意見を賜る@ご指導、ご鞭撻を賜りますよう
 
 
 
