--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -2,8 +2,8 @@
 > 如何在日常会话中更好的展现自己
 
 ## 1.1 受け答え(如何应答对方)
-### A. 原来如此:  
-**なるほど　→　おっしゃる通りです**  
+### A. 原来如此    
+**なるほど　→　おっしゃる通りです**    
 「なるほど」如字面所示，用来表示自己理解对方的意思。但是不能连着用，特别是对着VIP玩家，会显得不礼貌，没文化。更高级的表达方式如下:
 
 - **確かにそうですね。**  
