--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -19,7 +19,7 @@
 ### B. 没事
 **大丈夫です→問題ございません**  
 大丈夫是一句很好用的万金油句子。但是只会用这个可能会让人产生自己是一个话不多的孤僻症患者，或者没什么教养的错觉，简单的改成**問題ありません**印象会加分。
-- **差支えありません** 
+- **差支えありません**
 > 没什么障碍，无妨，没关系。比方说用在对方因为一些事情需要你调整事先约好的约会/会议时间，又担心你会有想法的时候，你可以来一句这个，让对方安心。
 
 - **子細ありません・子細に及びません**
@@ -39,7 +39,7 @@
 - **手元不如意で**  
 > 今、手元不如意なので、参加は遠慮させていただきます。
 
-- **金欠病で** 
+- **金欠病で**
 > 字面意思，把没钱说成病，没钱病。“今、金欠病にかかっていましたね。”
 
 - **糊口(ここう)をしのいでおります**
@@ -49,7 +49,7 @@
 - **素寒貧(すかんぴん)**  
 > 老子没钱！有点骂人的意思。給料前で素寒貧だよ。
 
-### D. 布吉岛 
+### D. 布吉岛
 **わかりません→勉強不足で申し訳ございません.**  
 被问到一些超出自己认知范围的问题的时候，勇于承认自己的无知是好事情，但同时放低姿态虚心请教会更好。特别是在职场上被客户或者上司问倒的时候。  
 
@@ -97,7 +97,7 @@
 **忘れてください→ご放念ください。**  
 经常会用在邮件里，请不要放在心上，请放心。  
 > おかげ様で回復しましたので、ご放念ください。
-- **お気になさないでください** 
+- **お気になさないでください**
 > 自己帮了对方大忙，对方诚惶诚恐的时候来一句这个可以加分。
 
 ### K. 一起，结伴
@@ -112,9 +112,27 @@
 @ご意見を賜る@ご指導、ご鞭撻を賜りますよう
 
 
+# Chapter.2 「お願いする」  
+###  A. 依赖     
+- 拜托 · 请求     
+目の上に対しては「お手を煩わせて申し訳ありません」が適切です。       
+
+**暇な時にお願いします→お手すきのときにお願いします**      
+
+**まげてお願いします**     
 
 
+### B. 请求帮助   
 
+**お力添えください**     
+**お骨折りいただけますでしょうか**    
+**肩をお貸しください**    
+**知恵をお貸しください**    
+**後ろ盾になっていただきたく** (目上)    
+**てこ入れをお願いします**       
 
+### C. 知っておいてください → お含みおきください  
 
+### D. 見ておいてください → お目通しのほどお願いします   
 
+### E. 
