--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -113,26 +113,32 @@
 
 
 # Chapter.2 「お願いする」  
-###  A. 依赖     
+
+### A. 依赖     
 - 拜托 · 请求     
 目の上に対しては「お手を煩わせて申し訳ありません」が適切です。       
 
-**暇な時にお願いします→お手すきのときにお願いします**      
-
-**まげてお願いします**     
-
+**暇な時にお願いします→お手すきのときにお願いします**          
+**まげてお願いします**　　      
 
 ### B. 请求帮助   
 
 **お力添えください**     
-**お骨折りいただけますでしょうか**    
-**肩をお貸しください**    
-**知恵をお貸しください**    
-**後ろ盾になっていただきたく** (目上)    
-**てこ入れをお願いします**       
+**お骨折りいただけますでしょうか**       
+**肩をお貸しください**     
+**知恵をお貸しください**     
+**後ろ盾になっていただきたく** (目上)      
+**てこ入れをお願いします**         
 
-### C. 知っておいてください → お含みおきください  
+### C. 知っておいてください → お含みおきください     
 
-### D. 見ておいてください → お目通しのほどお願いします   
+### D. 見ておいてください → お目通しのほどお願いします  
+**ご査収ください**(文件类收到了以后请确认)  
+**ご検収ください**(实物，东西收到了以后请确认)  
 
-### E. 
+
+### E. 自分のことを覚えておいてください　→　お見知りおきください  
+用于初次见面的场合，请记住我   
+
+
+# Chapter.2  开不了口的话  
