--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -141,4 +141,30 @@
 用于初次见面的场合，请记住我   
 
 
-# Chapter.2  开不了口的话  
+# Chapter.3  开不了口的话  
+### A. 当日は都合がつきません　→　当日はあいにく都合がつきません  
+### B. よんどころない急用ができました(突发急事，无法赴约。。。)
+
+**差し支えがありまして**
+>来週は差支えがあってお目にかかることができません。  
+
+**手がふさがっていまして**（手里满了）
+これ以上余裕がない  
+
+**ない袖(そで)は振れません**(高级词汇)  
+涉及到金钱和资力的时候可以使用  
+>援助したいのはやまやまですが、ない袖は振れません。  
+
+
+### C. 絶対無理です → 私には荷が勝ちます
+**ご容赦(ようしゃ)ください**  
+**ご寛恕いただきたくお願い申し上げます**( 用于书面，邮件)·
+
+### D. ~できません　→　~しかねます
+### E. (目下の自分から言いづらい・・・)　→　僭越(せんえつ)ながら申し上げます　　
+**出過ぎたことを言うようですが**   
+>出過ぎたことを言うようですが、今回の件は～
+
+**はがりながら**   　
+
+### F. それを責めるのは間違いでしょうか →　それはお門違いではないでしょうか　　     
