--- a/成年人的语言能力.md
+++ b/成年人的语言能力.md
@@ -158,13 +158,34 @@
 
 ### C. 絶対無理です → 私には荷が勝ちます
 **ご容赦(ようしゃ)ください**  
-**ご寛恕いただきたくお願い申し上げます**( 用于书面，邮件)·
+**ご寛恕いただきたくお願い申し上げます**( 用于书面，邮件)
 
 ### D. ~できません　→　~しかねます
 ### E. (目下の自分から言いづらい・・・)　→　僭越(せんえつ)ながら申し上げます　　
 **出過ぎたことを言うようですが**   
 >出過ぎたことを言うようですが、今回の件は～
 
-**はがりながら**   　
+**はがりながら** (诚惶诚恐，高级教养词汇)   
+>はがりながら意見を言わせていただきます。   　
 
-### F. それを責めるのは間違いでしょうか →　それはお門違いではないでしょうか　　     
+### F. それを責めるのは間違いでしょうか →　それはお門違いではないでしょうか　　  
+**筋違い**  
+>彼女に頼むのは筋違いだ  
+
+**場違い*
+**無理筋**(没有道理，乱来)  
+>その方法は無理筋でしょう。    
+
+**牽強付会**（强词夺理）     
+>　彼の反論は牽強付会です。
+
+**承服いたしかねます**  
+
+### G. 私のミスです→　私の不手際(ふてぎわ)です  
+>私の不手際でご迷惑をおかけして申し訳ございません。  
+私の落ち度でお客様をお待たせしてしまいました。
+
+粗相(そそう)
+
+手違い
+> 手違いでご連絡が遅れました。申し訳ありません。  
